--- a/style.css
+++ b/style.css
@@ -3,3 +3,31 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+img {
+  display: block;
+  margin: 0 auto;
+}
+.navbar a {
+  padding: 10px;
+  background-color: grey;
+}
+.caption {
+  font-size: 14px;
+  text-align: center;
+}
+#featured-property p {
+  width: 800px;
+  margin: 20px auto;
+  text-align: center;
+}
+#details div {
+  float: left;
+}
+.bottom-row div {
+  background-color: lightgrey;
+  text-align: center;
+  width: 25%;
+}
